# hw_tensor_compilers

./: .gitignore  CMakeLists.txt  readme.md
hw_tensor_compilers/data/: tiny.onnx
hw_tensor_compilers/include/graph/: attributes.hpp  graph.h  node.h  semantics.h  value.h
hw_tensor_compilers/include/io/: in_graph_onnx.h  out_graph_console.h
hw_tensor_compilers/src/: main.cpp
hw_tensor_compilers/src/graph/: graph.cpp  semantics.cpp
hw_tensor_compilers/src/io/: in_graph_onnx.cpp  out_graph_console.cpp  out_graph_graphviz.cpp
